--- a/functions/function_examples.ipynb
+++ b/functions/function_examples.ipynb
@@ -117,6 +117,103 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### check if a string is palindrome or not"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "def is_palindrome(s):\n",
+    "    s = s.lower().replace(\" \",\"\")\n",
+    "    return s == s[::-1]\n",
+    "\n",
+    "print(is_palindrome('A man a plan a canal Panama'))\n",
+    "print(is_palindrome('Hello'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### A function to read a file and count the frequency of each word"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'hello': 1, 'my': 1, 'name': 1, 'is': 1, 'pijush': 1, 'kanti': 1, 'i': 1, 'studied': 1, 'in': 1, 'hajee': 1, 'mohammad': 1, 'danesh': 1, 'science': 1, 'and': 1, 'technology': 1, 'university': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def count_word_freq(file_path):\n",
+    "    word_count = {}\n",
+    "    with open(file_path,'r') as file:\n",
+    "        for line in file:\n",
+    "            words = line.split()\n",
+    "            for word in words:\n",
+    "                word = word.lower().strip('.,!?;:\"\\'')\n",
+    "                word_count[word] = word_count.get(word,0)+1\n",
+    "    return word_count\n",
+    "filepath = 'sample.txt'\n",
+    "word_frequency = count_word_freq(filepath)\n",
+    "print(word_frequency)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Validate Email Address"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "def is_valid_email(email):\n",
+    "    pattern = r'^[a-zA-Z0-9_.+-]+@[a-zA-Z0-9-]+\\.[a-zA-Z0-9-.]+$'\n",
+    "    return re.match(pattern,email) is not None\n",
+    "\n",
+    "print(is_valid_email(\"pijushkantiroy2040@gmail.com\"))\n",
+    "print(is_valid_email(\"xyzhfjsdhj\"))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
